<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySecondCard">
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/layout_border"
        tools:ignore="UseLessParent"
        >
        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            style="@style/text_style"
            android:fontFamily="@font/regul"
            />
        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/iconhome_"
            android:text="@string/link"
            android:layout_marginTop="30dp"
            android:textColor="@color/LinkColor"
            style="@style/text_info"
            tools:ignore="UseCompatTextViewDrawableXml"
            />
        <TextView
            android:id="@+id/empolyee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/pers"
            style="@style/text_info"
            android:layout_marginTop="5dp"
            android:text="@string/empolyee"
            tools:ignore="UseCompatTextViewDrawableXml"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:id="@+id/location_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                style="@style/text_info"
                android:textColor="@color/black"
                android:drawableStart="@drawable/iconpinoutline_"
                android:layout_marginEnd="5dp"
                tools:ignore="UseCompatTextViewDrawableXml"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                style="@style/text_info"
                android:layout_marginStart="0dp"
                android:text="@string/location2"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Note_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noteBasic"
                style="@style/text_info"
                android:layout_marginStart="40dp"
                android:textColor="@color/black"
                android:layout_marginEnd="2dp"
                tools:ignore="UseCompatTextViewDrawableXml"
                />
            <TextView
                android:id="@+id/note2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                style="@style/text_info"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/note2"
                android:textColor="@color/black"
                tools:ignore="TextSizeCheck"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            style="@style/text_info"
            android:layout_marginStart="38dp"
            android:text="@string/time"/>
    </LinearLayout>

</LinearLayout>