<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".profile_card">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/layout_border"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/first_layout_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/first_layout_sub1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:src="@drawable/person"
                    tools:ignore="contentDescription"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_layout_group"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/second_layout_sub1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/num_of_posts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_info"
                        android:text="@string/numOfPosts"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="30dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/num_of_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_info"
                        android:text="@string/numOfFollowers"
                        android:textSize="23sp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="45dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/num_of_following"
                        style="@style/text_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="0dp"
                        android:text="@string/numOfFollowing"
                        android:textColor="@color/black" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/string_posts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stringPosts"
                        style="@style/text_info"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="20dp"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:id="@+id/string_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stringFollowers"
                        android:textColor="@color/black"
                        style="@style/text_info"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:id="@+id/string_Following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stringFollwing"
                        style="@style/text_info"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:textSize="18sp"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/text1_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1Position"
            style="@style/text_info"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/text2_Work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2Work"
            style="@style/text_info"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/dark_gray"
            />
        <TextView
            android:id="@+id/text3_description_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc1"
            android:drawableStart="@drawable/wave"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:drawablePadding="7dp"
            android:textColor="@color/black"
            tools:ignore="UseCompatTextViewDrawableXml"
            />
        <TextView
            android:id="@+id/text3_description_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc2"
            android:textSize="16sp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/text3_description_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc3"
            android:drawableStart="@drawable/mic"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:drawablePadding="2dp"
            android:textColor="@color/black"
            tools:ignore="UseCompatTextViewDrawableXml"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_link"
            android:layout_marginStart="14dp"
            android:textColor="#1565C0"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/follow_button"
            android:layout_gravity="center"
            android:text="@string/follow"
            android:drawableEnd="@drawable/instagram"
            android:height="55dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:drawablePadding="5dp"
            />


    </LinearLayout>
</LinearLayout>